# super-mega-data-gatherer

./: .env.example  Dockerfile  README.md  database_stats.py  docker-compose.yaml  env.py  logging_config.py  main.py  pyproject.toml  stats.py
.github/workflows/: docker-push.yaml
